<resources>
    <string name="app_name">My Personal Cookbook3.0</string>
    <string name="viewCookbook">My Cookbook</string>
    <string name="addRecipe">Add</string>
    <string name="title_activity_text_photo">TextPhoto</string>
    <string name="titleEditText">Recipe Title</string>
    <string name="categorieEditText">Recipe Category</string>
    <string name="takePhotoButton">Select an image</string>
    <string name="title_activity_photo_recipe">PhotoRecipeActivity</string>
    <string name="saveButton">Save Recipe</string>
    <string name="homeButton">Home</string>
    <string name="add_picture_button">Add Picture</string>
    <string name="action_settings">Settings</string>
    <string name="no_image">You haven\'t picked an Image</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="recipe_saved">Recipe Saved!</string>
    <string name="recipe_deleted">Recipe is deleted!</string>
    <string name="delete_check">Are you sure you want to delete this recipe?</string>
    <string name="write_recipe_edittext">Write your recipe here</string>


    <string-array name="recipe_titles">
        <item>Paella</item>
        <item>Pasta Pesto</item>
    </string-array>
</resources>
