<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fddca6"
    tools:context="com.example.kimschuiten.mypersonalcookbook30.PhotoRecipeActivity">


    <EditText
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:id="@+id/titleEditText2"
        android:hint="@string/titleEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#fae5d1"
        android:paddingBottom="1dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plusbutton"
        android:id="@+id/addExtraPictureButton"
        android:onClick="onAddPictureClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/recipePictureImageView"
        android:paddingTop="20dp"
        android:layout_above="@+id/saveButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoButton"
        android:id="@+id/takePhoto"
        android:onClick="takePhotoClick"
        android:background="#b34708"
        android:textColor="#faf6f6"
        android:layout_below="@+id/titleEditText2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/saveButton"
        android:id="@+id/saveButton"
        android:onClick="saveRecipeButtonClick"
        android:background="#b34708"
        android:textColor="#faf6f6"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:id="@+id/showExtraPicture"
        android:layout_below="@+id/addExtraPictureButton"
        android:layout_toEndOf="@+id/takePhoto"
        android:layout_above="@+id/recipePictureImageView" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/homeButton"
        android:id="@+id/HomeButton"
        android:onClick="HomeButtonClick"
        android:background="#b34708"
        android:textColor="#faf6f6"/>
</RelativeLayout>
