<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fddca6"
    tools:context="nl.mprog.kimschuiten.mypersonalcookbook30.TextRecipeActivity">

    <EditText
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:id="@+id/titleEditText"
        android:hint="@string/titleEditText"
        android:inputType="text"
        android:digits=" 1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="1dp"
        android:background="#fae5d1"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeText"
        android:id="@+id/recipePhotoImageView" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_below="@+id/titleEditText"
        android:hint="@string/write_recipe_edittext"
        android:id="@+id/recipeText"
        android:background="#fae5d1"
        android:gravity="top"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/saveButton"
        android:id="@+id/saveButton"
        android:onClick="saveRecipeButtonClick"
        android:background="#b34708"
        android:textColor="#faf6f6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/homeButton"
        android:id="@+id/HomeButton"
        android:onClick="HomeButtonClick"
        android:background="#b34708"
        android:textColor="#faf6f6"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plusbutton"
        android:id="@+id/addPictureButton"
        android:onClick="onAddPictureClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

   <!-- <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_picture_button"
        android:id="@+id/addPictureButton"
        android:onClick="onAddPictureClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />-->
</RelativeLayout>
